# DRESSCode

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  CODEOWNERS  CODE_OF_CONDUCT.md  LICENSE  LICENSE.txt  README.md  README.rst  calibration.py  collect_images.py  combine.py  config.txt.example  configloader.py  corrections.py  header_info.py  index.html  mkdocs.yml  pipeline.bash  pyproject.toml  requirements.txt  setup.cfg  setup.py  sitemap.xml  sort_by_year.py  utils.py  uvotattcorr.py  uvotbadpix.py  uvotexpmap.py  uvotimage.py  uvotimage2.py  uvotimsum.py  uvotskycorr.py  uvotskycorr2.py  uvotskylss.py
.github/workflows/: build_heasoft.yml  comment-on-pr.yml  docs.yml  lint.yml  main.yml  test-code.yml  test-comment.yml  (+1 more)
Docker/: README.md  dockerfile  heasoft-caldb-wcstools.dockerfile  heasoft_image.sh
LICENSE/: index.html
background_images/: README.md  check_aspect_corr_logs.py  lea_background_obsids.txt  lea_download.bash  single_image_pipeline.bash
developer_notes/: index.html
docs/: developer_notes.md  download_data.md  index.md  install.md  usage.md
download_data/: index.html
dresscode/: calibration.py  collect_images.py  combine.py  configloader.py  corrections.py  header_info.py  sort_by_year.py  utils.py  uvotattcorr.py  uvotbadpix.py  uvotexpmap.py  uvotimage.py  uvotimage2.py  uvotimsum.py  uvotskycorr.py  uvotskycorr2.py  uvotskylss.py
install/: index.html
notes/: index.html
search/: search_index.json
tests/: conftest.py  download_test_data.bash  fits2img.py  pr_comment.py  test_corrections.py  test_fits2img.py  test_pipeline.bash  test_pr_comment.py  test_util.py  test_utils.py
usage/: index.html
(+5 files in other folders)
