[metadata]
name = dresscode
version = 1.0.0.dev
author = DRESSCode Developers
author_email = bfalk@stsci.edu
license = BSD 3-Clause
license_file = LICENSE
description = Data Reduction of Extended SWIFT Sources Code
long_description = file: README.md
long_description_content_type = text/markdown
url = https://spacetelescope.github.io/DRESSCode/
project_urls =
    Bug Tracker = https://github.com/spacetelescope/DRESSCode/issues

[options]
package_dir =
    = dresscode
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    astropy
    ccdproc

[options.extras_require]
test = 
    pytest

docs = 
    mkdocs
    mkdocs-material

dev = 
    black
    flake8
    isort
    pre-commit

[options.packages.find]
where = src

[options.entry_points]
