[metadata]
name = dresscode
version = 1.0.0.dev
author = DRESSCode Developers
author_email = bfalk@stsci.edu
license = BSD 3-Clause
license_file = LICENSE
description = Data Reduction of Extended SWIFT Sources Code
long_description = file: README.md
long_description_content_type = text/markdown
url = https://spacetelescope.github.io/DRESSCode/
project_urls =
    Bug Tracker = https://github.com/spacetelescope/DRESSCode/issues

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    astropy
    ccdproc>=2.3.0

[options.package_data]
* = *.spec, sss/*.fits

[options.extras_require] 

dev = 
    black
    flake8
    isort
    pre-commit
    matplotlib  # for fits2img.py

    # testing
    pytest

    # docs
    mkdocs-material
